'Oops': Fixed a break in the style

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 #content {
     display:table;
     margin:1% 2%;
-    width:90%;
+    width:96%;
 }
 #input {
     font-size:100%;
